[package]
name = "socks-shadow"
version = "0.1.0"
authors = ["iamwwc <qaq1362211689@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "bin/server.rs"

[dependencies]
tokio = "1"
clap = "2.33.2"
futures = "0.3.14"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"]}